fixed video box item spacing

--- a/app/stylesheets/components/player/related.css
+++ b/app/stylesheets/components/player/related.css
@@ -60,6 +60,7 @@
 }
 
 .related-item img {
+  border-radius: 4px;
   margin: 0px;
   padding: 0px;
   cursor: pointer;
